--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -4,6 +4,10 @@ page-home {
         text-align: center
     }
 
+    h4 {
+        padding: 8px 0;
+    }
+
     .button {
         margin: 10px 0;
         padding: 10px 0;
