--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -18,4 +18,20 @@ page-home {
      padding: 16px 16px 32px 16px;      
     }
 
+    ion-icon {
+        margin: 8px;
+        padding: 8px;
+    }
+
+    .g-fs-lg {
+        font-size: 6em;
+    }
+
+    .g-ta-center {
+        text-align: center;
+    }
+
+
+    
+
 }
